--- a/src/Tabrizi/Home/Home.css
+++ b/src/Tabrizi/Home/Home.css
@@ -30,7 +30,7 @@
 
 .home .container {
     position: absolute;
-    top: 0; 
+    top: 2px; 
     left: 20%;
     transform: translateX(-50%);
     width: 100%;
@@ -142,7 +142,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
-        top: -10vh;
+        top: 2vh;
     }
 
     .home .container .title {
@@ -170,7 +170,7 @@
     .home {
         height: auto;
         min-height: 400px;
-        top: 0; 
+        top: 0px; 
     }
 
     .home .background-img img {
@@ -208,3 +208,4 @@
         width: 100%;
     }
 }
+
