--- a/src/Tabrizi/Home/Home.css
+++ b/src/Tabrizi/Home/Home.css
@@ -83,6 +83,7 @@
   transition: 0.3s background-color;
   cursor: pointer;
   text-align: center;
+  width: 60%;
 }
 
 .home .container button:hover {
@@ -119,6 +120,8 @@
     padding: 14px 25px;
     margin-left: 0;
     margin-top: 30px;
+    text-align: center;
+    width: 75%;
   }
 }
 
@@ -141,7 +144,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    top: 2vh;
+    top: -5vh;
   }
 
   .home .container .title {
@@ -161,7 +164,8 @@
     padding: 12px 20px;
     margin-left: 0;
     margin-top: 20px;
-    width: 100%;
+    width: 60%;
+    text-align: center;
   }
 }
 
@@ -184,7 +188,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    top: -15vh;
+    top: -25vh;
   }
 
   .home .container .title {
@@ -202,9 +206,8 @@
   .home .container button {
     font-size: 14px;
     padding: 10px 16px;
-    margin-left: 0;
-    margin-top: 20px;
-    width: 100%;
+    margin: auto;
+    width: 50%;
     text-align: center;
   }
 }
