--- a/src/Tabrizi/Sanitaire2/SanitaireHeader.css
+++ b/src/Tabrizi/Sanitaire2/SanitaireHeader.css
@@ -1,6 +1,10 @@
 
 /******************************************************Overlap code************************************************************/
- 
+/* *{
+    overflow-x: hidden;
+    box-sizing: border-box;
+
+} */
 .background-img img {
     width: 100%;
     height: auto;
@@ -16,9 +20,7 @@
   }
 
   /*******************************************************************************************************************/
-*{
-    overflow-x: hidden;
-}
+
 header {
     position: absolute;
     top: 0;
