--- a/src/Tabrizi/Chauffage/Chauffage.css
+++ b/src/Tabrizi/Chauffage/Chauffage.css
@@ -13,6 +13,8 @@
     margin-right: auto;
     min-height: 600px; 
     margin-top: 0%;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+
   }
   
   
