--- a/src/Tabrizi/Chauffage/Chauffage.css
+++ b/src/Tabrizi/Chauffage/Chauffage.css
@@ -546,3 +546,97 @@
       );
     }
   }
+
+
+  @media screen and (max-width: 380px) {
+    .chauffage-container {
+      flex-direction: column;
+      align-items: center;
+      gap: 8px;
+      padding: 0 5px; /* Reduce padding for smaller screens */
+    }
+  
+    .chauffage-container .section {
+      width: 100%;
+      min-width: 320px; /* Ensure adequate width for visibility */
+      min-height: 500px;
+    }
+  
+    .chauffage-container .section h2 {
+      font-size: 16px; /* Slightly reduce font size */
+      line-height: 20px;
+      margin-bottom: 12px;
+    }
+  
+    .chauffage-container .section .item {
+      margin-top: 4px;
+      margin-bottom: 30px; /* Reduce bottom margin */
+      gap: 6px;
+    }
+  
+    .chauffage-container .item .item-border {
+      width: 160px; /* Adjust width for better fit */
+      height: 160px; /* Adjust height for better fit */
+    }
+  
+    .chauffage-container .item .item-border img {
+      width: 80px; /* Adjust image size */
+      height: 80px;
+    }
+  
+    .chauffage-container .item .image1,
+    .chauffage-container .item .image2,
+    .chauffage-container .item .image3,
+    .chauffage-container .item .image4 {
+      width: 140px;
+      height: 140px;
+    }
+  
+    .chauffage-container .item .image2 img,
+    .chauffage-container .item .image3 img,
+    .chauffage-container .item .image4 img {
+      width: 90px;
+      height: 90px;
+    }
+  
+    .chauffage-container .item .image4 img {
+      margin-bottom: 0;
+    }
+  
+    .chauffage-container .item .item-border p {
+      font-size: 9px; /* Reduce font size */
+      line-height: 11px;
+    }
+  
+    .chauffage-container .item .image2::before,
+    .chauffage-container .item .image2::after {
+      border: 2px solid red; /* Adjust border size */
+    }
+  
+    .chauffage-container .item .image2::before {
+      clip-path: polygon(
+        0 0,
+        80% 0,
+        85% 10%,
+        65% 10%,
+        65% 75%,
+        85% 80%,
+        85% 100%,
+        0 100%
+      );
+    }
+  
+    .chauffage-container .item .image2::after {
+      clip-path: polygon(
+        0 0,
+        85% 0,
+        85% 10%,
+        65% 10%,
+        65% 75%,
+        85% 80%,
+        85% 100%,
+        0 100%
+      );
+    }
+  }
+  
