--- a/src/Tabrizi/Home/Home.css
+++ b/src/Tabrizi/Home/Home.css
@@ -64,7 +64,7 @@
   margin-top: 20px;
   font-family: "Rubik";
   font-size: 24px; /* Increased from 20px to 24px */
-  font-weight: 300;
+  font-weight: 400px;
   color: #ffffff;
 }
 
@@ -114,7 +114,9 @@
     font-size: 15px;
     margin-left: 0;
     margin-top: 40px;
-    font-weight: 700;
+    font-weight: 400px;
+    font-family: "Rubik";
+
   }
 
   .home .container button {
@@ -160,7 +162,8 @@
     font-size: 13px;
     margin-left: 0;
     margin-top: 20px;
-    font-weight: 700;
+    font-weight: 400px;
+    font-family: "Rubik";
   }
 
   .home .container button {
@@ -205,7 +208,9 @@
     font-size: 13px;
     margin-left: 0;
     margin-top: 20px;
-    font-weight: 700;
+    font-weight: 400px;
+    font-family: "Rubik";
+
   }
 
   .home .container button {
@@ -214,5 +219,6 @@
     margin: auto;
     width: 50%;
     text-align: center;
+    justify-content: center;
   }
 }
