--- a/src/Tabrizi/Chauffage/Chauffage.css
+++ b/src/Tabrizi/Chauffage/Chauffage.css
@@ -414,7 +414,7 @@
 
   }
   
-  .chauffage-container .item .item-border p {
+  .chauffage-container .item .item-border h3 {
     text-align: center;
     font-size: 14px;
     margin: 0;
@@ -501,7 +501,7 @@
       margin-bottom: 2px;
     }
   
-    .chauffage-container .item .item-border p {
+    .chauffage-container .item .item-border h3{
     font-size: 12px;
     font-family: 'Rubik';
     font-weight: 600; 
@@ -603,7 +603,7 @@
         border-width: 4px; /* Reduce border thickness */
     }
 
-    .chauffage-container .item .item-border p,
+    .chauffage-container .item .item-border h3,
     .chauffage-container .item .image1 p,
     .chauffage-container .item .image2 p,
     .chauffage-container .item .image3 p,
@@ -678,7 +678,7 @@
       box-sizing: border-box; /* Include border in the container's dimensions */
   }
 
-  .chauffage-container .item .item-border p,
+  .chauffage-container .item .item-border h3,
   .chauffage-container .item .image1 p,
   .chauffage-container .item .image2 p,
   .chauffage-container .item .image3 p,
@@ -754,7 +754,7 @@
       box-sizing: border-box; /* Include border in the container's dimensions */
   }
 
-  .chauffage-container .item .item-border p,
+  .chauffage-container .item .item-border h3,
   .chauffage-container .item .image1 p,
   .chauffage-container .item .image2 p,
   .chauffage-container .item .image3 p,
