--- a/src/Tabrizi/Header/Header.css
+++ b/src/Tabrizi/Header/Header.css
@@ -10,7 +10,6 @@ header {
     flex-direction: row;
     z-index: 1;
     justify-content: space-between;
-    padding: 10px 20px;
 }
 
 .container-logo {
@@ -18,6 +17,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0px;
 }
 
 .container-logo .logo {
@@ -25,7 +25,7 @@ header {
     height: 100%;
     object-fit: contain;
     background-color: #ffffff; /* Set background to white */
-    padding: 5px; /* Optional: Add padding to ensure the logo content doesn't touch the edges */
+    /* Optional: Add padding to ensure the logo content doesn't touch the edges */
   /* Optional: Add rounded corners for aesthetics */
 }
 
@@ -240,3 +240,5 @@ header {
         font-size: 14px;
     }
 }
+
+
