--- a/src/Tabrizi/Home/Home.css
+++ b/src/Tabrizi/Home/Home.css
@@ -42,6 +42,8 @@
   justify-content: center;
   min-height: 700px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
 
 .home .container .title {
@@ -146,7 +148,7 @@
     padding: 20px;
     max-width: 100%;
     left: 50%;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     text-align: center;
     top: -5vh;
@@ -222,3 +224,5 @@
     justify-content: center;
   }
 }
+
+
